--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "classnames": "^2.2.6",
     "firebase": "^5.8.6",
     "lodash": "^4.17.11",
     "next": "^8.0.3",
