--- a/package.json
+++ b/package.json
@@ -5,20 +5,40 @@
   "author": "Alex Ray <alex.ray12@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "npm run build && next export"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write src/**/*.{js,jsx}",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
     "firebase": "^5.8.6",
+    "gatsby": "^2.4.2",
+    "gatsby-plugin-layout": "^1.0.15",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-offline": "^2.1.0",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.0.36",
+    "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-transformer-sharp": "^2.1.19",
     "lodash": "^4.17.11",
-    "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-flip-toolkit": "^6.5.7"
+    "react-flip-toolkit": "^6.5.7",
+    "react-helmet": "^5.2.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.17.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aray12/littlewoods"
+  },
+  "bugs": {
+    "url": "https://github.com/aray12/littlewoods/issues"
   }
 }
