--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
-    "firebase": "^5.8.6",
     "gatsby": "^2.4.2",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-manifest": "^2.1.1",
@@ -29,7 +28,9 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-flip-toolkit": "^6.5.7",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-useinterval": "^1.0.1",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
